infra/istio/gateway/cloud-provider-kind/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: git-ops-gw
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  - protocol: HTTP
    port: 8085
    name: git-ops-init-gw
    allowedRoutes:
      namespaces:
        from: All
