infra/istio/gateway/cloud-provider-kind/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http0
spec:
  parentRefs:
  - name: git-ops-gw
  hostnames: ["some.exampledomain.example"]
  rules:
  - backendRefs:
    - name: git-ops-init
      port: 80
    #   weight: 70
    # - name: git-ops-init-canary
    #   port: 80
    #   weight: 30
